Try to fix z-index problem on iPhone with http://stackoverflow.com/questions/20832531/mobile-safari-positionfixed-z-index-glitch-when-scrolling

--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@
       background: #ededed;
       position: relative;
       z-index: 2;
+      -webkit-transform:translateZ(2px);
+      -moz-transform:translateZ(2px);
+      -o-transform:translateZ(2px);
+      transform:translateZ(2px);
     }
 
     h1{
